# covid19df

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_eda.yml
notebooks/: Fase 1_ Comprensión del Negocio - COVID-19.ipynb  Fase 2 – Comprensión de los Datos (Exploratory Data Analysis – EDA).ipynb  Fase 3_ Preparación de los Datos.ipynb
src/covid19df/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/covid19df/pipelines/eda/: __init__.py  nodes.py  pipeline.py
tests/pipelines/eda/: test_pipeline.py
venv_kedro/: pyvenv.cfg
venv_kedro/Scripts/: activate  activate.bat  pygrun
